@@ -2,6 +2,7 @@ sunuo (0.2.4) unstable; urgency=low
 
   * distribute log4net.dll
   * use log4net in exception handlers and more
+  * load legacy scripts from local/src and local/lib if present
 
  --
 
